--- a/nwpc_log_chart/package.json
+++ b/nwpc_log_chart/package.json
@@ -12,15 +12,15 @@
   "dependencies": {
     "argparse": "^1.0.9",
     "jsdom": "^11.3.0",
-    "nuwe-timeline": "^0.1.4"
+    "nuwe-timeline": "^0.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
+    "isomorphic-style-loader": "^4.0.0",
     "source-map-loader": "^0.2.3",
-    "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   }
 }
