add config sample file.

--- a/nwpc_log_collector/conf/smslog_local_collector.config.sample.yaml
+++ b/nwpc_log_collector/conf/smslog_local_collector.config.sample.yaml
@@ -1,7 +1,9 @@
 smslog_local_collector:
   sms:
     post:
+      # max records collected before post to database.
       max_count: 1000
 
   rdbms:
-    database_uri: sqlalchemy database uri
+    # database uri, using in sqlalchemy
+    database_uri: mysql+mysqlconnector://user:password@host/dbname
