use yaml as config file type for chart data schema.

--- a/nwpc_log_processor/run_time_line/conf/time_line_processor.sample.conf.yaml
+++ b/nwpc_log_processor/run_time_line/conf/time_line_processor.sample.conf.yaml
@@ -22,4 +22,4 @@ time_line_processor:
 
   chart_schema:
     # file path of chart schema
-    path: ./chart_data.schema.json
+    path: ./chart_data.schema.sample.yaml
