:wrench: use new config file in chart data generator.

--- a/nwpc-workflow-log-processor/nwpc_workflow_log_processor/rmdb/run_time_line/conf/time_line_processor.sample.conf.yml
+++ b/nwpc-workflow-log-processor/nwpc_workflow_log_processor/rmdb/run_time_line/conf/time_line_processor.sample.conf.yml
@@ -15,4 +15,4 @@ processor:
 
   chart_schema:
     # file path of chart schema
-    path: ./chart_data.schema.sample.yaml
+    path: ./chart_data.schema.sample.yml
