--- a/nwpc-workflow-log-chart/package.json
+++ b/nwpc-workflow-log-chart/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nwpc-log-chart",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,17 +11,18 @@
   "license": "MIT",
   "dependencies": {
     "argparse": "^1.0.9",
-    "gm": "^1.23.0",
-    "jsdom": "^11.3.0",
+    "gm": "^1.23.1",
+    "jsdom": "12.2.0",
     "nuwe-timeline": "^0.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^1.0.1",
     "isomorphic-style-loader": "^4.0.0",
     "source-map-loader": "^0.2.3",
-    "webpack": "^3.8.1"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   }
 }
