--- a/nwpc-workflow-log-processor/conf/processor.conf.yml
+++ b/nwpc-workflow-log-processor/conf/processor.conf.yml
@@ -1,18 +1,43 @@
-datastore:
-  mysql:
+# task config file for spark processor.
+
+task:
+  owner: nwp_xp
+  repo: pi_nwpc_op
+  workflow_type: ecflow
+  begin_date: "2020-01-22"
+  end_date: "2020-01-23"
+
+source:
+  - type: file
+    repo_type: ecflow
+    file_path: ecflow log file path
+
+  - type: mysql
     host: mysql ip
     port: mysql port
     user: user name
     password: password
     database: database name
     charset: charset
-    driver: mysql java driver jar file path
 
-  mongodb:
+sink:
+  - type: file
+    file_path: output file path
+
+  - type: print
+
+  - type: mongodb
     host: mongodb host
     port: mongodb port
     database: mongodb database name
 
 engine:
-  spark:
-    base: SPARK_HOME, Spark directory
+  type: spark
+  spark_home: SPARK_HOME, Spark directory
+  app_name: spark app name
+  log_level: INFO
+  spark_config:
+    "spark.executor.memory": 4g
+    "spark.driver.memory": 4g
+    "spark.executor.extraClassPath": driver path
+    "spark.driver.extraClassPath": dirver path
